build: Fallback $docdir to $datarootdir/doc/gettext
Problem reported by Santiago Vila in
<http://lists.gnu.org/archive/html/bug-gettext/2014-05/msg00014.html>.
* gettext-runtime/configure.ac: Adjust $docdir assuming that
AC_PACKAGE_TARNAME is set.
* gettext-tools/configure.ac: Likewise.
* gettext-tools/examples/configure.ac: Likewise.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -26,7 +26,7 @@ AM_INIT_AUTOMAKE([1.11.1 silent-rules parallel-tests])
 AC_CONFIG_HEADERS([config.h])
 
 dnl Installation directories.
-test "$docdir" != '${datarootdir}/doc/${PACKAGE}' || docdir='${datarootdir}/doc/gettext'
+test "$docdir" != '${datarootdir}/doc/${PACKAGE_TARNAME}' || docdir='${datarootdir}/doc/gettext'
 
 dnl Checks for programs.
 AC_PROG_CC
