--- a/gettext-tools/po/.gitignore
+++ b/gettext-tools/po/.gitignore
@@ -10,3 +10,13 @@
 
 /POTFILES
 /??@*.insert-header
+
+# Files copied from gettext-runtime:
+/Makefile.in.in
+/Rules-quot
+/boldquot.sed
+/en@boldquot.header
+/en@quot.header
+/insert-header.sin
+/quot.sed
+/remove-potcdate.sin
