build: Fix make distcheck
* gettext-runtime/man/Makefile.am (EXTRA_DIST): Add $(man_HTML3) so not to
regenerate them on make distcheck.

--- a/gettext-runtime/man/Makefile.am
+++ b/gettext-runtime/man/Makefile.am
@@ -49,7 +49,7 @@ man_HTML = $(man_HTML1) $(man_HTML3)
 
 EXTRA_DIST += help2man $(man_aux) $(man_MAN1IN) $(man_MAN1OTHER) \
 $(man_MAN3) $(man_MAN3IN) $(man_MAN3LINK) \
-$(man_HTML1IN) $(man_HTML1OTHER)
+$(man_HTML1IN) $(man_HTML1OTHER) $(man_HTML3)
 CLEANFILES = $(man_MAN1GEN) $(man_HTML1GEN)
 MAINTAINERCLEANFILES = $(man_MAN1IN) $(man_MAN1OTHER) $(man_MAN3) \
 $(man_HTML1IN) $(man_HTML1OTHER) $(man_HTML3)
