--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -29,6 +29,7 @@ version=@VERSION@
 prefix="@prefix@"
 datarootdir="@datarootdir@"
 : ${gettext_datadir="@datadir@/gettext"}
+: ${AUTOM4TE=autom4te}
 
 # func_tmpdir
 # creates a temporary directory.
@@ -151,7 +152,7 @@ m4_undefine([m4_exit])
 m4_undefine([m4_include])
 m4_undefine([m4_esyscmd])
 ' \
-  | ${AUTOM4TE:-autom4te} --no-cache --language=Autoconf-without-aclocal-m4 \
+  | "$AUTOM4TE" --no-cache --language=Autoconf-without-aclocal-m4 \
     --trace="$1":\$% - "$2" 2>/dev/null
 }
 
@@ -357,7 +358,7 @@ fi
 # is more accurate than func_trace_sed, but it only works with
 # autoconf >= 2.69.
 if echo "AC_PREREQ([2.69])" \
-  | autom4te --no-cache --language=Autoconf-without-aclocal-m4 - 2>&1; then
+  | "$AUTOM4TE" --no-cache --language=Autoconf-without-aclocal-m4 - 2>&1; then
   func_trace=func_trace_autoconf
 else
   func_trace=func_trace_sed
@@ -710,7 +711,9 @@ else
   echo "Not copying intl/ directory."
   # Tell the user what to put into configure.ac, if it is not already there.
   external=
-  xargs=`"$func_trace" AM_GNU_GETTEXT "$srcdir/$configure_in"`
+  # Need to use func_trace_sed instead of $func_trace, since
+  # AM_GNU_GETTEXT is not a standard Autoconf trace.
+  xargs=`func_trace_sed AM_GNU_GETTEXT "$srcdir/$configure_in"`
   save_IFS="$IFS"; IFS=:
   for arg in $xargs; do
     if test 'external' = "$arg"; then
