Fix gettext-runtime compilation error on Solaris 10
* gettext-runtime/configure.ac: Invoke AM_PROG_CC_C_O so that the
system stdbool.h will be used on Solaris.  Suggested by Paul Eggert in:
<https://lists.gnu.org/archive/html/bug-gnulib/2013-11/msg00053.html>.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -61,6 +61,7 @@ AC_EXEEXT
 
 dnl Make sure we see all GNU and Solaris extensions.
 gl_EARLY
+AM_PROG_CC_C_O
 
 dnl Check for build configuration.
 
