--- a/gettext-tools/gnulib-tests/.gitignore
+++ b/gettext-tools/gnulib-tests/.gitignore
@@ -237,6 +237,7 @@
 /test-term-ostream-xterm-88color.out
 /test-term-ostream-xterm-8bit.out
 /test-term-ostream-xterm-aix51.out
+/test-term-ostream-xterm-basic-italic.out
 /test-term-ostream-xterm-basic.out
 /test-term-ostream-xterm-irix65.out
 /test-term-ostream-xterm-linux-debian.out
