build: Fix parallel build from git checkout
Since po-gram-gen2.h depends on po-gram-gen.h, an explicit
dependency on the YACC rule is needed for parallel compilation.
* Makefile.am (po-gram-gen.h): Depend on po-gram-gen.c.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -455,6 +455,7 @@ po-gram-gen2.h: po-gram-gen.h
 	$(SED) -e 's/yy/po_gram_/g' -e 's/extern /extern DLL_VARIABLE /' \
 	  $${srcdir}po-gram-gen.h > $@-tmp && \
 	mv $@-tmp $@
+po-gram-gen.h: po-gram-gen.c
 
 
 # Special rules for installation of auxiliary programs.
