--- a/gettext-tools/gnulib-tests/.gitignore
+++ b/gettext-tools/gnulib-tests/.gitignore
@@ -112,6 +112,7 @@
 /test-intprops.c
 /test-inttypes.c
 /test-iswblank.c
+/test-langinfo.c
 /test-linkedhash_list.c
 /test-locale.c
 /test-localename.c
