hello-c-gnome3: Simplify variable substitution
* gettext-tools/examples/hello-c-gnome3/Makefile.am (hello.desktop):
Remove unnecessary $srcdir check.

--- a/gettext-tools/examples/hello-c-gnome3/Makefile.am
+++ b/gettext-tools/examples/hello-c-gnome3/Makefile.am
@@ -50,9 +50,7 @@ hello.desktop.in: hello.desktop.in.in
 
 hello.desktop: hello.desktop.in
 	@rm -f $@ $@-t
-	$(AM_V_GEN) srcdir=''; \
-	  test -f ./$< || srcdir=$(srcdir)/; \
-	  sed -e "s|@bindir[@]|$(bindir)|" $< > $@-t && mv $@-t $@
+	$(AM_V_GEN) sed -e 's|@bindir[@]|$(bindir)|g' $< > $@-t && mv $@-t $@
 
 CLEANFILES = $(BUILT_SOURCES) hello.desktop $(desktop_DATA)
 
